crates/carta/tests/snapshots/golden_writer__mediawiki__figure__figure-with-dims.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<div class="figure">
[[File:pic.png|200px|alt text]]
</div>
